add exceptions benchmark

--- a/Rchoffardet.Benchmarks/Rchoffardet.Benchmarks.csproj
+++ b/Rchoffardet.Benchmarks/Rchoffardet.Benchmarks.csproj
@@ -12,9 +12,11 @@
     <Optimize>true</Optimize>
     <Configuration>Release</Configuration>
     <IsPackable>false</IsPackable>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.12" />
+    <PackageReference Include="Spectre.console" Version="0.48.0" />
   </ItemGroup>
 </Project>
